--- a/index.html
+++ b/index.html
@@ -7,17 +7,45 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>portfolio</title>
+
 		<link rel="icon" type="image/png" href="./logo.png" />
+
+		<!-- Preconnect for faster font loading -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link
 			rel="preconnect"
 			href="https://fonts.gstatic.com"
 			crossorigin
 		/>
+
+		<!-- Inter font -->
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 			rel="stylesheet"
 		/>
+
+		<!-- Global font enforcement -->
+		<style>
+			*,
+			*::before,
+			*::after {
+				box-sizing: border-box;
+				font-family:
+					"Inter",
+					system-ui,
+					-apple-system,
+					BlinkMacSystemFont,
+					"Segoe UI",
+					sans-serif;
+			}
+
+			html,
+			body {
+				margin: 0;
+				padding: 0;
+				background-color: #000;
+			}
+		</style>
 		<script
 			type="module"
 			crossorigin
@@ -26,10 +54,11 @@
 		<link
 			rel="stylesheet"
 			crossorigin
-			href="./index-DW4FjTJ8.css"
+			href="./index-A7LH5URX.css"
 		/>
 	</head>
-	<body class="bg-black font-family">
+
+	<body>
 		<div id="root"></div>
 	</body>
 </html>
